--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 *{
   margin: 0;
   padding: 0;
@@ -7,8 +5,7 @@
       background-color: #151B54;
 
 }
-
-.App >h1{
+.app >h1{
   display: flex;
   padding: 5px;
   text-align: center;
@@ -17,7 +14,6 @@
   color:white;
 
 }
-
 
 .button{
   display: flex;
