--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ header h2{
   height: 90px;
   background-color: rgb(223, 219, 219);
 }
+
 .selectorwapper{
   display: flex;
   justify-content: space-between;
@@ -27,6 +28,7 @@ header h2{
   /* background-color: rgb(218, 40, 40); */
   margin-left: 60px;
 }
+
 .course select,.country select{
   width:250px;
   height: 35px;
@@ -103,3 +105,57 @@ header h2{
   background-color: #f4f4f4;
 }
 
+
+
+@media(max-width:360px){
+  .selectorwapper{
+    width:100%;
+    margin-left:0px;
+    height:50px;
+    display:block;
+  }
+  .course{
+    position: relative;
+    top:6px;
+
+  }
+  .course select,.country select{
+    margin-left:0px;
+    margin:5px 10px; 
+    width:68%;
+    height: 28px;
+    padding:0px 5px; 
+    font-size: 12px;
+    
+  }
+  .finder{
+    position: absolute;
+    top:75px;
+    right:8px;
+    
+  }
+  .finder button{
+    font-size: 12px;
+    padding:7px 10px;
+  }
+  .course select option,.country select option{
+
+    
+    font-size: 12px;
+    color:rgb(75, 72, 65);
+   
+  }
+
+  
+  .notfound h1{
+   font-size: 16px;
+   padding:40px;
+  }
+
+  .Welcome h1{
+    padding:40px;
+    font-size: 16px;
+    
+  }
+  .spiner{height: 70vh; }
+}
