--- a/src/Output.css
+++ b/src/Output.css
@@ -248,30 +248,44 @@
 }
 .collapsed_part>p{
     line-height: 18px;
+    width:100%;
 }
-.collapsed_part>p>span:first-child{
+
+
+.collapsed_part p span:first-child{
     background-color:rgb(51, 49, 48);
     height: 40px;
+    width:120px;
     color: whitesmoke;
-    padding:5px 10px 5px 10px;
+    /* padding:5px; */
+    padding:5px 15px 5px 15px;
     line-height: 32px;
     font-weight: 600;
 }
-.collapsed_part>p>span:nth-child(2){
-    background-color:rgb(101, 252, 206);
-    height: 40px;
-    padding:5px 10px 5px 10px;
-    line-height: 32px;
-    font-weight: 600;
-}
-.collapsed_part>p>span:nth-child(3){
+.collapsed_part p span:nth-child(2){
     background-color:rgb(51, 51, 50);
     height: 40px;
-    color: whitesmoke;
-    padding:5px 10px 5px 10px;
+    width:120px;
+    color:white;
+    padding:5px 20px 5px 20px;
+    /* padding:5px; */
     line-height: 32px;
     font-weight: 600;
 }
+.collapsed_part p span:nth-child(3){
+    background-color:rgb(51, 51, 50);
+    height: 40px;
+    width:120px;
+    color: whitesmoke;
+    padding:5px 15px 5px 15px;
+    /* padding:5px; */
+    line-height: 32px;
+    font-weight: 600;
+}
+
+
+
+
 .course_container{
     display:flex;
     margin-top:2px;
@@ -307,13 +321,15 @@
     align-items: center;
 }
 .help_and_collapse div:first-child{
-    padding:5px 10px;
-    font-size: 12px;
+    padding:5px 8px;
+    font-size: 10px;
     border-radius: 8px;
-    background-color: rgb(76, 206, 65);
+    background-color: rgb(2, 59, 15);
+    /* color:white; */
+    margin-right: 5px;
 }
 .help_and_collapse div a{
-    color: black;
+    color: white;
     text-decoration: none;
 
 }
@@ -416,7 +432,7 @@
        position:absolute;
        /* visibility: hidden; */
       
-       margin-left:200px;
+       margin-left:190px;
        margin-top:-75px;
        
     }
@@ -426,10 +442,12 @@
         position: absolute;
         font-size: 10px;
         font-weight: 500;
-        background-color: rgb(181, 245, 117);
-        padding:2px 5px 3px 5px;
+        background-color: rgb(28, 9, 110);
+        color:white;
+        padding:2px 9px 5px 9px;
         height:20px;
-        border-radius: 12px;
+        /* margin-right: 5px; */
+        border-radius: 8px;
         /* align-items: center; */
        
 
@@ -439,16 +457,6 @@
    }
     
    
-    
-
-
-
-
-
-
-
-
-
 
     .logo_content{
         /* display:none; */
@@ -521,29 +529,25 @@
     }
 
 
-
-
-
-
-
-
-
-
-
    .collapsed_part {
       
        width:100%;
        margin-top:10px;
-   }
+    }
+    .collapsed_part p:first-child{
+       
+        margin-top: 10px;
+        /* display: flex; */
+        
+    }
    .collapsed_part p span{
-       margin-left: 5px;
+       /* margin-left: 5px; */
+       /* display: flex; */
        z-index: 999;
-       width:140px;
-   }
-   .collapsed_part p:first-child{
+       padding:5px;
       
-       margin-top: 10px;
    }
+   
    .course_container{
        position: relative;
        width:100%;
